# lab1

./: .gitignore  CMakeLists.txt  barrel.cpp  barrel.hpp  lab1.cpp  matrix.cpp  matrix.hpp  mystring.cpp  mystring.hpp  rect.cpp  rect.hpp  textwrapper.cpp  textwrapper.hpp
